--- a/i18n/en/docusaurus-plugin-content-blog/authors.yml
+++ b/i18n/en/docusaurus-plugin-content-blog/authors.yml
@@ -1,6 +1,6 @@
 NhanAZ:
   name: Nguyen Thanh Nhan
-  title: Người sáng lập Bụi sao
+  title: Founder of Stardust
   url: https://github.com/NhanAZ
   image_url: https://github.com/NhanAZ.png
   email: nhanaz@duck.com
